--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@lagunovsky/redux-react-router": "^2.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,7 +15,6 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-saga": "^0.10.5",
     "axios": "^0.26.1",
-    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -56,6 +54,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "redux-saga-test-plan": "^4.0.4",
     "tailwindcss": "^3.0.23"
   }
 }
