--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.2",
+    "@types/redux-mock-store": "^1.0.3",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "redux-mock-store": "^1.5.4",
     "redux-saga-test-plan": "^4.0.4",
     "tailwindcss": "^3.0.23"
   }
