--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
@@ -24,6 +24,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "sass": "^1.49.9",
+    "type-fest": "^2.12.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
