--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/redux-mock-store": "^1.0.3",
     "autoprefixer": "^10.4.4",
